--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -22,6 +22,7 @@ h6 {
 
 img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -34,8 +35,15 @@ a {
     color: inherit;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+}
+
 li {
-    list-style: none;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 button {
