--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -2,7 +2,8 @@
     background-color: rgb(220, 230, 230);
     box-shadow: 0 1px 12px rgba(0, 0, 0, .08);
     height: 80px;
-
+    // position: fixed;
+    // width: 100%;
     .main-nav {
         gap: 12px;
         margin-inline-end: $mainLayoutPadding;
