--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,4 +1,6 @@
 .hero {
     height: 80vh;
     background-image: url(../../assets/Images/hero2.jpg);
+    // align-items: center;
+    // justify-content: center;
 }
