added stay-list and preview

--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -7,8 +7,10 @@ $clr5: #dddddd;
 $clr6: #ebebeb;
 $clr7: #f7f7f7;
 $clr8: #ffffff;
+$clr9: #DDDDDD;
 
 //LAYOUT
 
 $mainLayoutPadding: 80px;
+$mainLayoutRows: 80px;
 $detailsLayoutPadding: 115px;
