--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -2,6 +2,7 @@
     background-color: rgb(220, 230, 230);
     box-shadow: 0 1px 12px rgba(0, 0, 0, .08);
     height: 80px;
+    display: fixed;
 
     .main-nav {
         gap: 12px;
