--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -1,17 +1,30 @@
 .stay-details {
     gap: 10px;
 
+    .stay-name {
+        padding-top: 20px;
+    }
+
     .stay-gallery {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(2, 1fr);
         gap: 10px;
+
+        & img:nth-child(3) {
+            border-radius: 0 15px 0 0;
+        }
+
+        & img:nth-child(5) {
+            border-radius: 0 0 15px 0;
+        }
     }
 
     .main-img {
         display: grid;
         grid-column: 1/3;
         grid-row: 1/3;
+        border-radius: 15px 0 0 15px;
     }
 
     .stay-info-container {
@@ -34,15 +47,29 @@
         box-shadow: inset 0 -0.7px 0 0 $clr5;
         padding: 40px 0;
         gap: 15px;
+
+        .main-amenity-info {
+            padding-left: 30px;
+        }
     }
 
     .stay-summary {
         box-shadow: inset 0 -0.7px 0 0 $clr5;
         padding: 40px 0;
+        line-height: 1.5;
     }
 
     .amenities {
         padding: 40px 0;
+
+        .amenities-list {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+
+        .amenities-list-header {
+            padding-bottom: 15px;
+        }
     }
 
     .dot {
@@ -63,6 +90,7 @@
         height: 350px;
         position: sticky;
         top: 20px;
+        margin-inline-start: 50px;
     }
 
     .order-header {
@@ -75,6 +103,7 @@
         grid-template-columns: 1fr 1fr;
         // grid-gap: 40px 1px;
         gap: 40px;
+        padding-bottom: 40px;
     }
 
     .user-img {
@@ -86,5 +115,9 @@
 
     .dot:after {
         content: " \2219 ";
+    }
+
+    .testing {
+        background-color: rgb(62, 139, 139);
     }
 }
