added more filters

--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -3,4 +3,32 @@
     border: solid 1px $clr9;
     grid-row: 2;
     margin-bottom: rem(36px);
+    
+    // button{
+
+    // }
+    img{
+        height: rem(24px);
+        width: rem(24px);
+    }
+
+    // button{
+    //     height: rem(40px);
+    //     width: rem(40px);
+
+    // }
+
+    // .design {
+    //     background-position: center;
+    //     background-image: url(../../assets/icons/design.jpg);
+    //         // background-image: url(/images/buttons/add.png); /* 16px x 16px */
+    //         background-color: transparent; /* make the button transparent */
+    //         background-repeat: no-repeat;  /* make the background image appear only once */
+    //         background-position: 0px 0px;  /* equivalent to 'top left' */
+    //         border: none;           /* assuming we don't want any borders */
+    //         cursor: pointer;        /* make the cursor like hovering over an <a> element */
+    //         height: 16px;           /* make this the size of your image */
+    //         padding-left: 16px;     /* make text start to the right of the image */
+    //         vertical-align: middle; /* align the text vertically centered */
+    // }
 }
