--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -97,7 +97,7 @@
     }
 
     .dot {
-        font-size: 2rem;
+        font-size: 1.5rem;
         margin: 0 5px;
     }
 
@@ -109,21 +109,41 @@
     }
 
     .order-container {
-        border: 2px solid black;
         width: 350px;
-        height: 350px;
+        height: 250px;
         position: sticky;
-        top: 20px;
+        top: 3%;
         margin-inline-start: 50px;
+        border: 1px solid #00000030;
+        border-radius: 13px;
+        box-shadow: 0 0 5px 5px #00000015;
+        padding: 20px;
+        transition: .5s;
+        z-index: 1;
+
+        .order-header {
+            align-items: center;
+            justify-content: space-between;
+
+            :nth-child(2) {
+                font-size: rem(14px);
+            }
+
+            .dot {
+                font-size: 1.2rem;
+                margin: 0 5px;
+            }
+        }
 
         .order-icon {
             width: 14px;
         }
-    }
 
-    .order-header {
-        align-items: center;
-        justify-content: space-between;
+        .order-price {
+            font-weight: bold;
+            color: $clr3;
+            font-size: rem(22px);
+        }
     }
 
     .reviews-container {
