--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -1,34 +1,52 @@
 .stay-filter{
-    height: 80px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    height:rem(125px);
     border: solid 1px $clr9;
-    grid-row: 2;
-    margin-bottom: rem(36px);
+    // grid-row: 2;
     
-    // button{
+    .labels-container{
+        display:flex;
+        gap: rem(30px) ;
+    }
 
-    // }
     img{
         height: rem(24px);
         width: rem(24px);
+        color: $clr10;
     }
 
-    // button{
-    //     height: rem(40px);
-    //     width: rem(40px);
+    button{
+        height: rem(50px);
+        background-color: unset;
+        color: $clr10;
+        // width: rem(40px);
 
-    // }
+    }
 
-    // .design {
-    //     background-position: center;
-    //     background-image: url(../../assets/icons/design.jpg);
-    //         // background-image: url(/images/buttons/add.png); /* 16px x 16px */
-    //         background-color: transparent; /* make the button transparent */
-    //         background-repeat: no-repeat;  /* make the background image appear only once */
-    //         background-position: 0px 0px;  /* equivalent to 'top left' */
-    //         border: none;           /* assuming we don't want any borders */
-    //         cursor: pointer;        /* make the cursor like hovering over an <a> element */
-    //         height: 16px;           /* make this the size of your image */
-    //         padding-left: 16px;     /* make text start to the right of the image */
-    //         vertical-align: middle; /* align the text vertically centered */
-    // }
+    .btn-label{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        
+        gap: rem(10px);
+    }
+
+    .btn-filters{
+        .icon-container{
+            height: rem(16px);
+            width: rem(16px);
+        }
+        border: solid 1px $clr9;
+        height: rem(50px);
+        width: rem(90px);
+        display:flex;
+        border-radius: 13px;
+        align-items: center;
+        justify-content: center;
+        gap: rem(10px);
+    }
+
+
 }
