--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -1,3 +1,5 @@
+//FLEX HELPERS
+
 .flex {
     display: flex;
 }
@@ -22,4 +24,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.align-self-center {
+    align-self: center;
 }
