--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -6,12 +6,12 @@
     // width: 100%;
     .main-nav {
         gap: 12px;
-        margin-inline-end: $mainLayoutPadding;
+        margin-inline-end: 30px;
     }
 
     .logo {
         color: $clr1;
-        margin-inline-start: $mainLayoutPadding;
+        // margin-inline-start: $mainLayoutPadding;
         cursor: pointer;
     }
 
@@ -25,6 +25,7 @@
         width: 80px;
         border-radius: 25px;
         border: 1px solid $clr6;
+        // margin-inline-end: $mainLayoutPadding;
 
         img:nth-child(1) {
             width: 20px;
