Filters modal UI

--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -16,3 +16,7 @@ $clr10:#71719F;
 $mainLayoutPadding: 80px;
 $mainLayoutRows: 80px;
 $detailsLayoutPadding: 115px;
+
+//BUTTON
+
+$btnBorderRadius: 10px;
