--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -1,51 +1,150 @@
-.stay-filter{
-    display:flex;
+.stay-filter {
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    height:rem(125px);
-    border: solid 1px $clr9;
-    // grid-row: 2;
-    
-    .labels-container{
-        display:flex;
-        gap: rem(30px) ;
+    height: rem(125px);
+    // border: solid 1px $clr9;
+
+    .labels-container {
+        display: flex;
+        gap: rem(30px);
     }
 
-    img{
+    img {
         height: rem(24px);
         width: rem(24px);
-        color: $clr10;
+        opacity: 0.55;
     }
 
-    button{
-        height: rem(50px);
+    button {
+        height: rem(47px);
         background-color: unset;
-        color: $clr10;
-        // width: rem(40px);
-
+        color: $clr2;
     }
 
-    .btn-label{
-        display:flex;
+    .btn-label {
+        display: flex;
         flex-direction: column;
         align-items: center;
-        
+        font-weight: bold;
+        font-size: 11px;
         gap: rem(10px);
     }
 
-    .btn-filters{
-        .icon-container{
-            height: rem(16px);
-            width: rem(16px);
+    .btn-filters {
+        .icon-container {
+            margin-top: 3px;
+            height: rem(13px);
+            width: rem(13px);
         }
+
+        color: unset;
+        font-weight: bold;
+        font-size: 11px;
         border: solid 1px $clr9;
-        height: rem(50px);
+        // height: rem(47px);
         width: rem(90px);
         display:flex;
-        border-radius: 13px;
+        border-radius: $btnBorderRadius;
         align-items: center;
         justify-content: center;
-        gap: rem(10px);
+        gap: rem(8px);
+    }
+
+    .filters-modal{
+        border: solid 1px $clr9;
+        border-radius: 15px;
+        width: 55%;
+        height: 90%;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: $clr8;
+
+        .modal-title{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px 25px;
+            font-weight: bold;
+            font-size: rem(16px);
+            color: $clr3;
+            border-bottom: solid 1px $clr9;
+            
+        }
+
+        .modal-details{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 0 rem(25px);
+            // overflow: scroll;
+            overflow: auto;
+
+            > * {
+                padding: rem(32px) 0;
+                border-bottom: solid 1px $clr9;
+
+            }
+
+            .title{
+                font-size: rem(22px);
+                color: $clr3;
+                font-weight: bold;
+                padding: 0 0 12px;
+            }
+
+
+            .amenities-content{
+                padding: 12px 0;
+                    display: flex;
+                    > * {
+                        flex-basis: 50%;
+                    }
+
+            }
+            .price{
+                input{
+                    -webkit-appearance: none;
+                    background-color: $clr2;
+                    height: 2px;
+                    width: 60%;
+                    border: none;
+                }
+                
+            }
+        }
+
+        .modal-footer{
+            display: flex;
+            justify-content: space-between;
+            padding: 20px 25px;
+            .show-btn{
+                background-color: $clr3;
+                color: $clr8;
+                font-weight: bold;
+                font-size: rem(16px);
+                padding-left: rem(25px);
+                padding-right: rem(25px);
+                border-radius: $btnBorderRadius;
+
+            }
+
+            .clear-btn{
+                font-size: rem(16px);
+                font-weight: bold;
+                text-decoration: underline;
+                color: $clr3;
+
+            }
+
+
+        }
     }
 
 
