added user modal working at every page + guests modal design + homepage design

--- a/src/styles/cmps/_app-footer.scss
+++ b/src/styles/cmps/_app-footer.scss
@@ -1,8 +1,7 @@
 .app-footer{
-    background-color: rgb(220, 230, 230);
-    height: 46px;
+    height: 5vh;
     border-top: solid 1px $clr9;
     // position: fixed;
-    bottom: 0;
-    grid-row: 4;
+    // bottom: 0;
+    // grid-row: 4;
 }
