--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -1,12 +1,27 @@
 .app-header {
     // background-color: rgb(220, 230, 230);
-    box-shadow: 0 1px 12px rgba(0, 0, 0, .08);
+    // box-shadow: 0 1px 12px rgba(0, 0, 0, .08);
+    box-shadow: 0 2px 2px $clr6;
     height: 80px;
+
     // position: fixed;
     // width: 100%;
     .main-nav {
-        gap: 12px;
-        margin-inline-end: 30px;
+        // gap: 12px;
+        margin-inline-end: 10px;
+
+        a {
+            align-items: center;
+            border-radius: 25px;
+            display: flex;
+            height: 42px;
+            padding: 15px;
+            font-weight: bold;
+        }
+
+        a:hover {
+            background-color: $clr6;
+        }
     }
 
     .logo {
@@ -25,7 +40,6 @@
         width: 80px;
         border-radius: 25px;
         border: 1px solid $clr6;
-        // margin-inline-end: $mainLayoutPadding;
 
         img:nth-child(1) {
             width: 20px;
