--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -151,8 +151,8 @@
         .guests-modal {
             display: flex;
             position: absolute;
-            line-height: 20px;
-            bottom: 181px;
+            line-height: 25px;
+            bottom: 86px;
             left: 0;
             width: 100%;
             background-color: #fff;
@@ -160,6 +160,9 @@
             box-shadow: 0 2px 4px rgb(0 0 0 / 18%);
             z-index: 2000;
             padding: 20px;
+            gap: 20px;
+            transition: 4s;
+            cursor: default;
         }
 
         .open-guests-btn {
@@ -179,7 +182,7 @@
         }
 
         .order-icon {
-            width: 14px;
+            width: 12px;
         }
 
         .order-price {
@@ -250,6 +253,17 @@
 
     .guest-type {
         width: 100%;
+
+        .guest-detail {
+
+            .type {
+                font-weight: bold;
+            }
+
+            .type-exact {
+                font-size: rem(14px);
+            }
+        }
     }
 
 }
