--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @import 'setup/variables';
 @import 'setup/mixins';
 @import 'setup/functions';
+@import 'setup/keyframes';
 
 // BASICS
 @import 'basics/helpers';
@@ -23,3 +24,4 @@
 @import 'cmps/stay-list';
 @import 'cmps/stay-preview';
 @import 'cmps/user-menu-modal';
+@import 'cmps/google-map';
