--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -65,6 +65,7 @@
         flex-direction: column;
         justify-content: space-between;
         background-color: $clr8;
+        // overflow: auto;
 
         .modal-title{
             display: flex;
@@ -87,7 +88,7 @@
             overflow: auto;
 
             > * {
-                padding: rem(32px) 0;
+                padding: rem(20px) 0;
                 border-bottom: solid 1px $clr9;
 
             }
