--- a/src/styles/cmps/_stay-preview.scss
+++ b/src/styles/cmps/_stay-preview.scss
@@ -18,6 +18,7 @@
     .txt-container{
 
         color: $clr2;
+        gap:5px;
     }
 
     .bold{
@@ -30,8 +31,8 @@
     }
 
     .icon {
-        height: 1.2rem;
-        width: 1.2rem;
+        // height: rem(14px);
+        width: rem(11px);
     }
 
 }
