--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -1,7 +1,9 @@
 .app-header {
     // background-color: rgb(220, 230, 230);
     // box-shadow: 0 1px 12px rgba(0, 0, 0, .08);
-    box-shadow: 0 2px 2px $clr6;
+    // box-shadow: 0 2px 2px $clr6;
+    border-bottom: solid 1px $clr9;
+
     height: 80px;
 
     // position: fixed;
@@ -16,7 +18,7 @@
             display: flex;
             height: 42px;
             padding: 15px;
-            font-weight: bold;
+            font-weight: 500;
         }
 
         a:hover {
@@ -26,6 +28,9 @@
 
     .logo {
         color: $clr1;
+        font-size: 22px;
+        font-weight: bold;
+        font-family: Circular-Bold;
         // margin-inline-start: $mainLayoutPadding;
         cursor: pointer;
     }
