--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -3,33 +3,56 @@
     justify-content: space-between;
     align-items: center;
     height: rem(125px);
-    // border: solid 1px $clr9;
+    // position: fixed;
+    background-color: $clr8;
+    border-bottom: solid 1px $clr9;
 
     .labels-container {
         display: flex;
         gap: rem(30px);
     }
 
-    img {
-        height: rem(24px);
-        width: rem(24px);
-        opacity: 0.55;
-    }
-
     button {
         height: rem(47px);
         background-color: unset;
-        color: $clr2;
     }
-
+    
     .btn-label {
+        color: $clr2;
         display: flex;
         flex-direction: column;
         align-items: center;
         font-weight: bold;
         font-size: 11px;
         gap: rem(10px);
+        padding: 10px 0 10px;
+        // border: solid 1px black;
+        height: rem(70px);
+       
+        img {
+            height: rem(24px);
+            width: rem(24px);
+            opacity: 0.55;
+        }
     }
+    .btn-label:hover {
+        color: $clr3;
+        border-bottom: solid 2px $clr5;
+        img{
+            opacity: 1;
+        }
+    }
+    .btn-label {
+        &.selected{
+            color: $clr3;
+            border-bottom: solid 2px $clr3;
+            img{
+                opacity: 1;
+            }
+        }
+    }
+
+
 
     .btn-filters {
         .icon-container {
@@ -76,6 +99,7 @@
             font-size: rem(16px);
             color: $clr3;
             border-bottom: solid 1px $clr9;
+            flex:1;
             
         }
 
@@ -86,6 +110,7 @@
             padding: 0 rem(25px);
             // overflow: scroll;
             overflow: auto;
+            flex:8;
 
             > * {
                 padding: rem(20px) 0;
@@ -125,6 +150,7 @@
             display: flex;
             justify-content: space-between;
             padding: 20px 25px;
+            flex:1;
             .show-btn{
                 background-color: $clr3;
                 color: $clr8;
