fixed guets counter

--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -163,6 +163,10 @@
             gap: 20px;
             transition: 4s;
             cursor: default;
+
+            .guest-amount {
+                position: relative;
+            }
         }
 
         .open-guests-btn {
