--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -19,6 +19,10 @@
         width: 150px;
         background-color: $clr9;
 
+        &:hover {
+            background-color: $clr11;
+        }
+
         span {
             font-size: rem(20px);
             font-family: circular-light;
