--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -5,7 +5,7 @@
     height: rem(125px);
     // position: fixed;
     background-color: $clr8;
-    border-bottom: solid 1px $clr9;
+    // border-bottom: solid 1px $clr9;
 
     .labels-container {
         display: flex;
@@ -108,7 +108,6 @@
             flex-direction: column;
             justify-content: space-between;
             padding: 0 rem(25px);
-            // overflow: scroll;
             overflow: auto;
             flex:8;
 
