--- a/src/styles/cmps/_stay-preview.scss
+++ b/src/styles/cmps/_stay-preview.scss
@@ -1,31 +1,44 @@
-.stay-preview{
+.stay-preview {
     // border: solid 1px $clr9;
     gap: 1rem;
-    
-    
-    .img-container{
+
+
+    .img-container {
         // border: solid 1px $clr9;
         min-width: 275px;
         min-height: 260px;
         border-radius: 15px;
         margin-bottom: 5px;
-        
+        position: relative;
+
         img {
             aspect-ratio: 1 / 1;
             border-radius: 15px;
         }
+
+        .icon-heart {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            width: 23px;
+            height: 23px;
+            z-index: 10;
+
+        }
     }
-    .txt-container{
+
+    .txt-container {
 
         color: $clr2;
-        gap:5px;
+        gap: 5px;
     }
 
-    .bold{
+    .bold {
         color: $clr3;
         font-family: Circular-Bold;
     }
-    .light{
+
+    .light {
         font-family: Circular-Light;
 
     }
