--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -3,13 +3,14 @@
     justify-content: space-between;
     align-items: center;
     height: rem(125px);
-    // position: fixed;
     background-color: $clr8;
     // border-bottom: solid 1px $clr9;
+    // position: fixed;
+    // margin-top: -130px;
 
     .labels-container {
         display: flex;
-        gap: rem(30px);
+        gap: rem(55px);
     }
 
     button {
@@ -73,6 +74,7 @@
         justify-content: center;
         gap: rem(8px);
     }
+    
 
     .filters-modal{
         border: solid 1px $clr9;
@@ -83,6 +85,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        z-index: 10;
     
         display: flex;
         flex-direction: column;
