changed demo data -> fixed it to fit to our site

--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -16,7 +16,8 @@
             align-items: center;
             border-radius: 25px;
             display: flex;
-            height: 42px;
+            // height: 42px;
+            height: 8.5vh;
             padding: 15px;
             font-weight: 500;
         }
