fixed hover on header

--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -21,8 +21,7 @@
             align-items: center;
             border-radius: 25px;
             display: flex;
-            // height: 42px;
-            height: 8.5vh;
+            height: 40px;
             padding: 15px;
             font-weight: 500;
         }
