fixed bug with data

--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -1,7 +1,4 @@
 .app-header {
-    // background-color: rgb(220, 230, 230);
-    // box-shadow: 0 1px 12px rgba(0, 0, 0, .08);
-    // box-shadow: 0 2px 2px $clr6;
     border-bottom: solid 1px $clr9;
     background-color: none;
 
@@ -14,21 +11,19 @@
     // z-index: 10;
 
     .main-nav {
-        // gap: 12px;
         margin-inline-end: 10px;
 
         a {
             align-items: center;
             border-radius: 25px;
             display: flex;
-            // height: 42px;
-            height: 8.5vh;
+            height: 42px;
             padding: 15px;
             font-weight: 500;
         }
 
         a:hover {
-            background-color:$clr6-opacity
+            background-color: $clr6-opacity
         }
     }
 
