--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -40,6 +40,8 @@
 
     .stay-info-container {
         box-shadow: inset 0 -0.7px 0 0 $clr5;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
     }
 
     .host-info {
