--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -10,7 +10,7 @@
 
     .labels-container {
         display: flex;
-        gap: rem(55px);
+        gap: rem(50px);
     }
 
     button {
@@ -24,7 +24,7 @@
         flex-direction: column;
         align-items: center;
         font-weight: bold;
-        font-size: 11px;
+        font-size:rem(12px);
         gap: rem(10px);
         padding: 10px 0 10px;
         // border: solid 1px black;
