fixed font size - filters btn

--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -64,7 +64,7 @@
 
         color: unset;
         font-weight: bold;
-        font-size: 11px;
+        font-size:rem(12px);
         border: solid 1px $clr9;
         // height: rem(47px);
         width: rem(90px);
