--- a/src/styles/cmps/user-menu-modal.scss
+++ b/src/styles/cmps/user-menu-modal.scss
@@ -11,6 +11,7 @@
     transform: translate(-50%, -50%);
     transition: .3s;
     width: 230px;
+    z-index: 50;
 
     ul {
         display: flex;
