--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -1,7 +1,10 @@
 :root {
     --padding: 80px;
     --position: sticky;
-    --grid-column: 2 ;
+    --grid-column: 2;
+    --border-style: solid;
+    --border-width: 1px;
+    --border-color: #DDDDDD
 }
 
 //COLOR PATTERNS
@@ -21,8 +24,8 @@ $clr10: #71719F;
 
 //LAYOUT
 
-$mainLayoutPadding: 80px;
-$mainLayoutRows: 80px;
+// $mainLayoutPadding: 80px;
+// $mainLayoutRows: 80px;
 $detailsLayoutPadding: 400px;
 
 //BUTTON
