--- a/src/styles/setup/keyframes.scss
+++ b/src/styles/setup/keyframes.scss
@@ -13,13 +13,14 @@
 }
 
 .slide-top {
-	animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
- @keyframes slide-top {
+@keyframes slide-top {
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(-100px);
   }
@@ -55,5 +56,43 @@
 
   100% {
     transform: translateX(-100px);
+  }
+}
+
+
+.dots {
+  width: 5em;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  margin-left: 50%;
+  margin-top: 30%;
+}
+
+.dots div {
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  background-color: #fc2f70;
+  animation: fade 0.8s ease-in-out alternate infinite;
+}
+
+.dots div:nth-of-type(1) {
+  animation-delay: -0.4s;
+}
+
+.dots div:nth-of-type(2) {
+  animation-delay: -0.2s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
   }
 }
