--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -11,8 +11,9 @@
         font-weight: bold;
 
         .start-icon {
-            width: 14px;
-            padding-right: 5px;
+            width: 12px;
+            height: 12px;
+            margin-right: 7px;
         }
     }
 
