--- a/src/styles/cmps/user-menu-modal.scss
+++ b/src/styles/cmps/user-menu-modal.scss
@@ -5,7 +5,7 @@
     height: 240px;
     overflow: hidden;
     position: absolute;
-    right: 5%;
+    right: var(--right);
     top: 8.5%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
