--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -10,6 +10,7 @@
         color: $clr8;
         font-size: rem(35px);
         text-shadow: 2px 2px 4px $clr3;
+        padding-bottom: 30px;
     }
 
     .hero-button {
