--- a/src/styles/setup/_variables.scss
+++ b/src/styles/setup/_variables.scss
@@ -4,7 +4,8 @@
     --grid-column: 2;
     --border-style: solid;
     --border-width: 1px;
-    --border-color: #DDDDDD
+    --border-color: #DDDDDD;
+    --right: 5%;
 }
 
 //COLOR PATTERNS
