--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -141,7 +141,7 @@
         }
 
         .guest-input {
-            border-top: 1px solid $clr9;
+            border-top: 1px solid $clr11;
             cursor: pointer;
             padding: 12px;
 
@@ -210,15 +210,28 @@
                 border-radius: 13px;
 
                 .dates-container {
-                    padding: 10px;
+                    // padding: 10px;
+
+                    input::-webkit-datetime-edit,
+                    input::-webkit-inner-spin-button,
+                    input::-webkit-clear-button {
+                        display: none;
+                    }
 
                     .check-date {
                         border: none;
                     }
 
                     label {
-                        font-size: rem(13px);
+                        font-size: rem(10px);
+                        padding: 15px 12px 10px;
+                        flex-basis: 50%;
+
+                        &:last-child {
+                            border-left: 1px solid $clr11
+                        }
                     }
+
                 }
             }
         }
