--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -113,7 +113,7 @@
 
     .order-container {
         width: 350px;
-        height: 500px;
+        height: 480px;
         position: sticky;
         top: 3%;
         margin-inline-start: 50px;
@@ -131,11 +131,17 @@
 
             :nth-child(2) {
                 font-size: rem(14px);
+                font-weight: 600;
+                padding-left: 4px;
+
+                span:nth-child(2) {
+                    text-decoration: underline;
+                }
             }
 
             .dot {
                 font-size: 1.2rem;
-                margin: 0 5px;
+                margin: 0 3px;
             }
 
         }
@@ -186,7 +192,7 @@
             height: 48px;
             width: 100%;
             background: linear-gradient(90deg, #f1254b 0, #e61e4d 27.5%, #e31c5f 40%, #d70466 57.5%, #bd1e59 75%, #bd1e59 100%);
-            border-radius: 13px;
+            border-radius: 8px;
             font-size: rem(16px);
             color: $clr8;
             font-weight: bold;
@@ -242,6 +248,14 @@
 
         .order-summary {
             gap: 10px;
+
+            >*:not(:last-child) {
+
+                span:not(:last-child) {
+                    text-decoration: underline;
+                }
+
+            }
         }
 
         .total-sum {
@@ -253,14 +267,17 @@
     }
 
     .reviews-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        // grid-gap: 40px 1px;
-        gap: 40px;
-        padding-bottom: 40px;
+        // display: grid;
+        // grid-template-columns: 1fr 1fr;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 100px;
+        padding: 50px 0 40px 0;
+        box-shadow: inset 0 -0.7px 0 0 $clr5;
 
         .review {
             gap: 20px;
+            flex-basis: 40%;
         }
 
         .review-user-info {
@@ -269,6 +286,31 @@
 
         .review-date {
             color: $clr4;
+        }
+    }
+
+    .add-review-container {
+
+        padding-top: 30px;
+        padding-bottom: 40px;
+        box-shadow: inset 0 -0.7px 0 0 $clr5;
+
+        .add-title {
+            padding-bottom: 20px;
+        }
+
+        textarea {
+            width: 100%;
+            border: 1px solid $clr9;
+            resize: none;
+
+            &::placeholder {
+                font-size: 18px;
+            }
+
+            &:focus {
+                outline: 1px solid $clr2;
+            }
         }
     }
 
@@ -299,6 +341,12 @@
             .type-exact {
                 font-size: rem(14px);
             }
+        }
+    }
+
+    .map {
+        h2 {
+            padding: 44px 0 30px 0;
         }
     }
 
