--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -17,7 +17,8 @@
             display: flex;
             height: 40px;
             padding: 15px;
-            font-weight: 500;
+            font-weight: 600;
+            font-size: rem(15px);
         }
 
         a:hover {
