--- a/src/styles/setup/keyframes.scss
+++ b/src/styles/setup/keyframes.scss
@@ -1,3 +1,5 @@
+//SLIDES ANIME
+
 .slide-bottom {
   animation: slide-bottom 0.3s cubic-bezier(0.250, 0, 0.450, 0.940) both;
 }
@@ -20,12 +22,28 @@
   0% {
     transform: translateY(0);
   }
-
+  
   100% {
     transform: translateY(-100px);
   }
 }
 
+.slide-left {
+  animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+@keyframes slide-left {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-100px);
+  }
+}
+
+
+//SWING
 
 .swing-in-top-bck {
   animation: swing-in-top-bck 0.6s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
@@ -45,20 +63,8 @@
   }
 }
 
-.slide-left {
-  animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
 
-@keyframes slide-left {
-  0% {
-    transform: translateX(0);
-  }
-
-  100% {
-    transform: translateX(-100px);
-  }
-}
-
+//LOADER
 
 .dots {
   width: 5em;
