--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -88,4 +88,15 @@
         }
     }
 
+    .curr-reviews {
+        color: $clr3;
+        font-size: rem(22px);
+        font-weight: 600;
+
+        .star-icon {
+            width: 15px;
+            height: 15px;
+            margin-right: 7px;
+        }
+    }
 }
