--- a/src/styles/cmps/_checkout.scss
+++ b/src/styles/cmps/_checkout.scss
@@ -7,7 +7,7 @@
 
 .order-container {
     width: 350px;
-    height: 480px;
+    height: 490px;
     position: sticky;
     top: 3%;
     margin-inline-start: 50px;
@@ -149,6 +149,10 @@
                 text-decoration: underline;
             }
 
+        }
+
+        :nth-child(3) {
+            padding-bottom: 10px;
         }
     }
 
