--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -99,4 +99,45 @@
             margin-right: 7px;
         }
     }
+
+    meter {
+        height: rem(10px);
+        width: rem(118px);
+    }
+
+    meter::-webkit-meter-bar {
+        background: $clr6-opacity;
+        border-radius: unset;
+    }
+
+    /*background color of bar*/
+    meter::-webkit-meter-optimum-value {
+        background: $clr3;
+    }
+
+
+    .curr-reviews {
+        padding-top: 30px;
+    }
+
+    .reviews-summary {
+        padding-top: 30px;
+        font-size: rem(16px);
+        font-weight: 400;
+        flex-wrap: wrap;
+        gap: 20px;
+
+        span {
+            font-size: rem(12px);
+            font-weight: 600;
+        }
+    }
+
+    .stats-container {
+        flex-basis: 40%;
+    }
+
+    .rating-bar {
+        gap: 10px;
+    }
 }
