split filter modal to new cmp, fix filtering

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -29,6 +29,7 @@
 @import 'cmps/stay-list';
 @import 'cmps/stay-preview';
 @import 'cmps/stay-filter';
+@import 'cmps/stay-filter-modal';
 
   //STAY-DETAILS
 @import 'cmps/amenities';
