--- a/src/styles/cmps/_stay-filter-modal.scss
+++ b/src/styles/cmps/_stay-filter-modal.scss
@@ -1,8 +1,8 @@
 .stay-filter-modal {
     border: solid 1px $clr9;
     border-radius: 15px;
-    width: 55%;
-    // height: 90%;
+    width: rem(780px);
+    height: rem(530px);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -13,11 +13,40 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: $clr8;
-    // overflow: auto;
+    // overflow: scroll;
 
     button {
         height: rem(47px);
         background-color: unset;
+    }
+
+    label {
+        font-size: rem(18px);
+    }
+
+    .property-type-labels {
+        display: flex;
+        gap: rem(20px)
+    }
+
+    .property-type-btn {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: rem(10px);
+        padding:rem(20px);
+        width: rem(170px);
+        height: rem(120px);
+        border: solid 1px $clr9;
+        border-radius: 15px;
+        font-weight: bold;
+        font-size: rem(16px);
+
+        img{
+            width: rem(30px);
+            height: rem(30px);
+
+        }
     }
 
     .modal-title {
@@ -39,7 +68,8 @@
         justify-content: space-between;
         padding: 0 rem(25px);
         overflow: auto;
-        flex: 8;
+        flex: 2;
+        height: rem(380px);
 
         >* {
             padding: rem(20px) 0;
@@ -81,8 +111,16 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 20px 25px;
+        padding: 15px 25px;
         flex: 1;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        background-color: $clr8;
+        border-top: solid 1px $clr9;
+        border-bottom-left-radius:15px;
+        border-bottom-right-radius:15px;
+
 
         .show-btn {
             background-color: $clr3;
