--- a/src/styles/cmps/_reviews.scss
+++ b/src/styles/cmps/_reviews.scss
@@ -3,13 +3,19 @@
     // grid-template-columns: 1fr 1fr;
     display: flex;
     flex-wrap: wrap;
-    gap: 100px;
-    padding: 50px 0 40px 0;
+    gap: 50px;
+    padding: 20px 0 40px 0;
     box-shadow: inset 0 -0.7px 0 0 $clr5;
 
     .review {
         gap: 20px;
         flex-basis: 40%;
+
+        p {
+            -webkit-line-clamp: 4;
+            overflow: hidden;
+            max-height: 120px;
+        }
     }
 
     .review-user-info {
@@ -19,4 +25,68 @@
     .review-date {
         color: $clr4;
     }
+
+    .curr-reviews {
+        color: $clr3;
+        font-size: rem(22px);
+        font-weight: 600;
+
+        .star-icon {
+            width: 15px;
+            height: 15px;
+            margin-right: 7px;
+        }
+    }
+
+    meter {
+        height: rem(10px);
+        width: rem(118px);
+    }
+
+    meter::-webkit-meter-bar {
+        background: $clr6-opacity;
+        border-radius: unset;
+    }
+
+    /*background color of bar*/
+    meter::-webkit-meter-optimum-value {
+        background: $clr3;
+    }
+
+
+    .curr-reviews {
+        padding-top: 30px;
+    }
+
+    .reviews-summary {
+        padding-top: 30px;
+        font-size: rem(16px);
+        font-weight: 400;
+        flex-wrap: wrap;
+        gap: 20px;
+
+        span {
+            font-size: rem(12px);
+            font-weight: 600;
+        }
+    }
+
+    .stats-container {
+        flex-basis: 40%;
+    }
+
+    .rating-bar {
+        gap: 10px;
+        width: 150px;
+    }
+
+    .reviews-info {
+        gap: 50px 180px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+.css-sghohy-MuiButtonBase-root-MuiButton-root {
+    background-color: $clr9;
 }
