Added top rated list, UI fixes, added filters func and UI

--- a/src/styles/cmps/_app-footer.scss
+++ b/src/styles/cmps/_app-footer.scss
@@ -1,6 +1,7 @@
 .app-footer {
     background-color: white;
-    height: 5vh;
+    height: 3vh;
+    font-size: 14px;
     border-top: solid 1px $clr9;
     position: fixed;
     bottom: 0;
