--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,7 +25,12 @@
 @import 'cmps/user-menu-modal';
 @import 'cmps/user-msg';
 
-  //STAY-APP
+//HOME
+@import 'cmps/top-rated-list';
+@import 'cmps/top-rated-preview';
+
+
+//STAY-APP
 @import 'cmps/stay-list';
 @import 'cmps/stay-preview';
 @import 'cmps/stay-filter';
