--- a/src/styles/cmps/_checkout.scss
+++ b/src/styles/cmps/_checkout.scss
@@ -13,7 +13,10 @@
     margin-inline-start: 50px;
     border: 1px solid #00000030;
     border-radius: 13px;
-    box-shadow: 0 0 5px 5px #00000015;
+    // box-shadow: 0 0 5px 5px #00000015;
+    box-shadow:     rgb(0 0 0 / 12%) 0px 6px 16px;
+
+
     padding: 20px;
     transition: .5s;
     z-index: 1;
