--- a/src/styles/cmps/_order-modal.scss
+++ b/src/styles/cmps/_order-modal.scss
@@ -7,7 +7,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: 0 0 5px 5px #00000015;
+    box-shadow:     rgb(0 0 0 / 12%) 0px 6px 16px;
 
     z-index: 10;
     padding: 20px;
