--- a/src/styles/pages/_stay-details.scss
+++ b/src/styles/pages/_stay-details.scss
@@ -60,6 +60,9 @@
             width: 100%;
             border: 1px solid $clr9;
             resize: none;
+            border-radius: rem(15px);
+            gap: 5px;
+
 
             &::placeholder {
                 font-size: 18px;
