--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -36,7 +36,8 @@
     }
 
 }
-.top-rated-title{
+
+.top-rated-title {
     padding-top: rem(20px);
     padding-bottom: rem(20px);
     padding-inline-start: rem(80px);
@@ -45,16 +46,16 @@
     font-size: rem(25px);
 }
 
-.host-img{
+.homepage-host-img {
     height: 80vh;
-    background-image: url(../../assets/Images/host.jpg);
+    background-image: url(../../assets/Images/homepage-host.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
     justify-content: center;
     padding-bottom: rem(40px);
 
-    .txt-container{
+    .txt-container {
         // border:1px solid black;
         display: flex;
         flex-direction: column;
@@ -70,23 +71,23 @@
 
         .mouse-cursor-gradient-tracking {
             position: relative;
-             outline: none;
+            outline: none;
             overflow: hidden;
             height: 47px;
-            width:rem(130px);
+            width: rem(130px);
             background: linear-gradient(90deg, #f1254b 0, #e61e4d 27.5%, #e31c5f 40%, #d70466 57.5%, #bd1e59 75%, #bd1e59 100%);
             border-radius: 8px;
             font-size: rem(16px);
             color: $clr8;
             font-weight: bold;
-   
-          }
-          
-          .mouse-cursor-gradient-tracking span {
+
+        }
+
+        .mouse-cursor-gradient-tracking span {
             position: relative;
-          }
-          
-          .mouse-cursor-gradient-tracking:before {
+        }
+
+        .mouse-cursor-gradient-tracking:before {
             --size: 0;
             content: '';
             position: absolute;
@@ -94,14 +95,13 @@
             top: var(--y);
             width: var(--size);
             height: var(--size);
-            background: radial-gradient(circle closest-side, #e64462 , transparent);
+            background: radial-gradient(circle closest-side, #e64462, transparent);
             transform: translate(-50%, -50%);
             transition: width 0.2s ease, height 0.2s ease;
-          }
-          
-          .mouse-cursor-gradient-tracking:hover:before {
+        }
+
+        .mouse-cursor-gradient-tracking:hover:before {
             --size: 200px;
-          }
+        }
     }
 }
-
