--- a/src/styles/setup/_typography.scss
+++ b/src/styles/setup/_typography.scss
@@ -12,3 +12,8 @@
     font-family: Circular-Light;
     src: url(../../assets/fonts/Circular/CircularStd-Light.otf)
 }
+
+@font-face {
+    font-family: DancingScript-Regular;
+    src: url(../../assets/fonts/DancingScript/DancingScript-Regular.ttf)
+}
