--- a/src/styles/cmps/_add-review.scss
+++ b/src/styles/cmps/_add-review.scss
@@ -1,6 +1,6 @@
 .add-review-container {
 
-    padding-top: 30px;
+    padding-top: 20px;
     padding-bottom: 40px;
     box-shadow: inset 0 -0.7px 0 0 $clr5;
 
@@ -8,21 +8,29 @@
         padding-bottom: 20px;
     }
 
-    textarea {
+    .txt-container {
         width: 100%;
-        border: 3px solid $clr9;
-        resize: none;
+        border: 2px solid $clr9;
         border-radius: rem(15px);
         gap: 5px;
         margin-bottom: 20px;
+        padding: 15px;
 
-        &::placeholder {
-            font-size: 18px;
-            padding: 10px;
-        }
+        textarea {
+            border: unset;
+            resize: none;
+            width: 100%;
+            font-size: rem(16px);
 
-        &:focus {
-            outline: 1px solid $clr2;
+            &::placeholder {
+                font-size: 16px;
+                font-family: Circular-Light;
+            }
+
+            &:focus {
+                outline: none;
+            }
+
         }
     }
 
@@ -46,4 +54,5 @@
         }
 
     }
+
 }
