--- a/src/styles/cmps/_reviews.scss
+++ b/src/styles/cmps/_reviews.scss
@@ -8,7 +8,6 @@
         color: $clr3;
         font-size: rem(22px);
         font-weight: 600;
-        padding-top: 30px;
 
         .star-icon {
             width: 15px;
@@ -68,8 +67,13 @@
         .review-user-info {
             gap: 10px;
 
+            h2 {
+                font-size: rem(16px);
+            }
+
             .review-date {
-                color: $clr4;
+                color: $clr2;
+                font-size: rem(14px);
             }
         }
 
