--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,6 +1,6 @@
 .hero {
     height: 85vh;
-    background-image: url(../../assets/Images/hero.jpg);
+    background-image: url(../../assets/Images/hero6.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
