--- a/src/styles/cmps/_app-footer.scss
+++ b/src/styles/cmps/_app-footer.scss
@@ -1,11 +1,18 @@
 .app-footer {
-    background-color: white;
-    height: 3vh;
+    height: 60px;
+    margin-top: 24px;
     font-size: 14px;
-    border-top: solid 1px $clr9;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    z-index: 200;
-    // grid-row: 4;
+    border-top: 1px solid $clr9;
+
+    .txt-container {
+        width: 100%;
+        padding: 0 var(--padding);
+    }
+
+    .footer-icon {
+        width: 16px;
+        height: 16px;
+        margin-right: 7px;
+    }
 }
+
