--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -46,4 +46,9 @@
 @import 'cmps/order-modal';
 @import 'cmps/add-review';
 
-
+ //HOST
+ @import 'cmps/order-list.scss';
+ @import 'cmps/order-preview.scss';
+ @import 'cmps/order-status-modal.scss';
+ @import 'cmps/hosting-list';
+ @import 'cmps/hosting-preview';
